# tiny-projects-fastapi

./: rough.sql
media-sharing-platform/: .gitignore  README.md  init_db.py  main.py  pyproject.toml
media-sharing-platform/app/: app.py  db.py  images.py  schemas.py
