[project]
name = "media-sharing-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.0",
    "fastapi-users[sqlalchemy]>=14.0.2",
    "imagekitio>=4.2.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
